fix z-index for CM text

--- a/experimental/cardwiki/css/editor.css
+++ b/experimental/cardwiki/css/editor.css
@@ -87,7 +87,7 @@ body div { display: flex; display: -webkit-flex; flex-direction:column; -webkit-
 .search-plan * { flex:1; padding: 5px; background: #333; }
 .search-plan > * + * { margin-left:1px; }
 
-.search-container { position:absolute; min-width: 300px; }
+.search-container { position:absolute; min-width: 300px; z-index:1; }
 
 
 .search-headers { flex-direction:row; margin-bottom:1px; }
